--- a/SAANWEB/nbproject/private/private.properties
+++ b/SAANWEB/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Juan Pablo\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
-j2ee.server.home=C:/apache-tomcat-7.0.92
-j2ee.server.instance=tomcat70:home=C:\\apache-tomcat-7.0.92
+deploy.ant.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
+j2ee.server.home=C:/Users/juann/Desktop/apache-tomcat-7.0.93
+j2ee.server.instance=tomcat70:home=C:\\Users\\juann\\Desktop\\apache-tomcat-7.0.93
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Juan Pablo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
