Generar archivo de excel

--- a/SAANWEB/nbproject/project.properties
+++ b/SAANWEB/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.mail.jar=mail.jar
+file.reference.poi-3.9-20121203.jar=poi-3.9-20121203.jar
 file.reference.UpperEssentialLookAndFeel_Inale_.jar=UpperEssentialLookAndFeel[Inale].jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.UpperEssentialLookAndFeel_Inale_.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.poi-3.9-20121203.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
