--- a/SAANWEB/nbproject/private/private.properties
+++ b/SAANWEB/nbproject/private/private.properties
@@ -4,4 +4,4 @@ j2ee.server.instance=tomcat70:home=C:\\Users\\juann\\Desktop\\apache-tomcat-7.0.
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Juan Pablo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
