--- a/SAANWEB/nbproject/private/private.properties
+++ b/SAANWEB/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
-j2ee.server.home=C:/Users/juann/Desktop/apache-tomcat-7.0.93
-j2ee.server.instance=tomcat70:home=C:\\Users\\juann\\Desktop\\apache-tomcat-7.0.93
+deploy.ant.properties.file=C:\\Users\\pipel\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+j2ee.server.home=D:/java/apache-tomcat-9.0.17
+j2ee.server.instance=tomcat90:home=D:\\java\\apache-tomcat-9.0.17
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\pipel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
